fix(styles): VM group change dialog is cut off - fixes

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -439,7 +439,6 @@ mat-table mat-header-cell,
 
 .mat-dialog-container {
   max-height: 95vh !important;
-  overflow: visible !important;
 }
 
 .mat-dialog-actions {
